--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ p {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    background: url('./images/banners/hero-vika.jpg');
+    background: url('./images/banners/hero-vika.jpg?v=6');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
